css/orange.css
/* ... */
    .btn.btn-warning:hover {
      box-shadow: 0 8px 20px rgba(255, 234, 0, 0.35); }
    .btn.btn-warning:active {
      box-shadow: none !important; }
  .btn.btn-danger {
    box-shadow: 0 8px 16px rgba(255, 23, 68, 0.3);
    transition: all .2s ease-out; }
    .btn.btn-danger:hover {
      box-shadow: 0 8px 20px rgba(255, 23, 68, 0.35); }
    .btn.btn-danger:active {
      box-shadow: none !important; }
  .btn.btn-light {
    box-shadow: 0 8px 16px rgba(236, 239, 241, 0.3);
    transition: all .2s ease-out; }
    .btn.btn-light:hover {
      box-shadow: 0 8px 20px rgba(236, 239, 241, 0.35); }
    .btn.btn-light:active {
      box-shadow: none !important; }
  .btn.btn-dark {
    box-shadow: 0 8px 16px rgba(17, 23, 26, 0.3);
    transition: all .2s ease-out; }
    .btn.btn-dark:hover {
      box-shadow: 0 8px 20px rgba(17, 23, 26, 0.35); }
    .btn.btn-dark:active {
      box-shadow: none !important; }

/*Navbar*/
.navbar.navbar-transparent {
  opacity: 0.98; }

@media (max-width: 992px) {
  .navbar.navbar-transparent {
    background-color: rgba(0, 0, 0, 0.4); } }

.navbar .navbar-brand {
  font-size: 1.5rem;
  font-weight: 900;
  color: #ff9100;
  text-transform: uppercase; }

.navbar .navbar-nav .nav-item {
  margin: 0 .7rem; }
  .navbar .navbar-nav .nav-item .nav-link {
    font-weight: 600; }

.section-angle {
  position: relative;
  border-color: inherit;
  background: #000000; }
  .section-angle:before, .section-angle:after {
    width: 0;
    height: 0;
    position: absolute;
    content: "";
    left: 0;
    border: 0 solid transparent;
    z-index: 3; }
  .section-angle.top-left:before, .section-angle.top-right:before {
    top: 0;
    border-left-width: 100vw; }
  .section-angle.bottom-left:after, .section-angle.bottom-right:after {
    bottom: 0;
    border-right-width: 100vw; }
  .section-angle.bottom-left:after {
    border-right-color: inherit; }
  .section-angle.bottom-right:after {
    border-bottom-color: inherit; }
  .section-angle.top-left:before {
    border-top-color: inherit; }
  .section-angle.top-right:before {
    border-left-color: inherit; }
  @media (min-width: 992px) {
    .section-angle.bottom-right:after, .section-angle.top-right:before {
      border-bottom-width: 2rem; }
    .section-angle.bottom-left:after, .section-angle.top-left:before {
      border-top-width: 2rem; } }
  @media (max-width: 767.98px) {
    .section-angle.bottom-right:after, .section-angle.top-right:before {
      border-bottom-width: 1rem; }
    .section-angle.bottom-left:after, .section-angle.top-left:before {
      border-top-width: 1rem; } }

/*smart scrolling*/
.smart-scroll {
  position: fixed;
  top: 0;
  z-index: 1020;
  width: 100%;
  transition: all .3s ease-out; }
  .smart-scroll.scrolling {
    -webkit-transform: translateY(-100%);
            transform: translateY(-100%); }
    .smart-scroll.scrolling.up {
      background-color: rgba(0, 0, 0, 0.9);
      -webkit-transform: translateY(0);
              transform: translateY(0);
      transition: all .3s ease-out; }

/**dividers */
.divider {
  position: relative; }
  .divider.top-divider:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    display: block;
    height: 1px;
    background: #263238;
    background: linear-gradient(to right, rgba(255, 145, 0, 0.1) 0, #263238 50%, rgba(255, 145, 0, 0.1) 100%); }
  .divider.bottom-divider:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    display: block;
    height: 1px;
    background: #263238;
    background: linear-gradient(to right, rgba(255, 145, 0, 0.24) 0, #263238 50%, rgba(255, 145, 0, 0.24) 100%); }

/*vertical heights */
.vh-100 {
  height: 100vh; }

@media (min-width: 576px) {
  .vh-sm-100 {
    height: 100vh; } }

@media (min-width: 768px) {
  .vh-md-100 {
    height: 100vh; } }

.bg-hero {
  background-color: #000000;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='#000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='#331d00' cx='400' cy='400' r='500'/%3E%3Ccircle fill='#663a00' cx='400' cy='400' r='400'/%3E%3Ccircle fill='#995700' cx='400' cy='400' r='300'/%3E%3Ccircle fill='#cc7400' cx='400' cy='400' r='200'/%3E%3Ccircle fill='#ff9100' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
  /* background by SVGBackgrounds.com */
  background-attachment: fixed;
  background-size: cover;
  position: relative; }
  .bg-hero:before {
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
    display: block;
    left: 0;
    top: 0;
    content: "";
   }
  .bg-hero .container {
    z-index: 2;
    position: relative; }

/*features boxes*/
.feature-boxes {
  text-align: center; }
  .feature-boxes .box {
    padding: 3rem; }

/*features-list */
.features-list {
  list-style: none; }
  .features-list li {
    float: left;
    width: 50%;
    margin-top: 0;
    margin-bottom: 1.75rem;
    font-size: 1.05rem;
    padding-left: 1.75rem;
    font-weight: 500; }
    .features-list li:before {
      position: relative;
      font-family: FontAwesome;
      font-size: 14px;
      content: "\f10c";
      color: #ff9100;
      margin: 0 .75rem 0 0; }

/*Pricing tables*/
.pricing-table .pricing-list {
  margin-bottom: 3rem;
  margin-top: 2rem; }
  .pricing-table .pricing-list li {
    margin-bottom: 1rem;
    font-size: 1.05rem;
    font-weight: 500; }

.pricing-table .card {
  transition: all .25s ease-out;
  text-align: center; }
  .pricing-table .card .card-body {
    padding: 2.25rem 2rem; }
  .pricing-table .card.active {
    color: white;
    background-color: transparent; }
    .pricing-table .card.active h2, .pricing-table .card.active h3 {
      color: #ffffff; }

/**slick slider */
.slick-dots {
  top: -4rem; }
  .slick-dots li button::before {
    font-size: .75rem !important;
    line-height: 3.5rem !important; }
/* ... */

